testsuite/tests/typecheck/should_fail/T15629.stderr

T15629.hs:26:37: error:
    • Couldn't match kind ‘z’ with ‘ab’
      Expected kind ‘x ~> F x ab’,
        but ‘F1Sym :: x ~> F x z’ has kind ‘x ~> F x z’
      ‘z’ is a rigid type variable bound by
        ‘forall z ab.
         Proxy ((Comp (F1Sym :: x ~> F x z) F2Sym) :: F x ab ~> F x ab)’
        at T15629.hs:26:17
      ‘ab’ is a rigid type variable bound by
        ‘forall z ab.
         Proxy ((Comp (F1Sym :: x ~> F x z) F2Sym) :: F x ab ~> F x ab)’
        at T15629.hs:26:19-20
    • In the first argument of ‘Comp’, namely ‘(F1Sym :: x ~> F x z)’
      In the first argument of ‘Proxy’, namely
        ‘((Comp (F1Sym :: x ~> F x z) F2Sym) :: F x ab ~> F x ab)’
      In the type signature:
        g :: forall z ab.
             Proxy ((Comp (F1Sym :: x ~> F x z) F2Sym) :: F x ab ~> F x ab)
